--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,37 @@
 body {
   background-color: pink;
 }
+.card-container {
+  /* display: grid; */
+}
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+}
+.player1Cards {
+  /* grid-row: 1; */
+}
+.player2Cards {
+  /* grid-row: 2; */
+}
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
